# Splithaus

./: .gitignore
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  pyproject.toml  requirements.txt  test_ocr.py
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/parsers/: __init__.py  costco.py  kmart.py  woolworths.py
backend/app/routers/: ocr.py
backend/app/services/: parser.py  textract.py
backend/tests/: test_parser.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: AppFooter.tsx  LogoMark.tsx
frontend/src/components/receipt/: UploadZone.tsx
frontend/src/components/split/: AssigningPanel.tsx  ItemSplitRow.tsx  PeopleSetupModal.tsx  PersonTotalBar.tsx  PrintContent.tsx  ReceiptPreviewPanel.tsx  ReviewPanel.tsx  SettlementScreen.tsx  SplitModePanel.tsx
frontend/src/constants/: colors.ts
frontend/src/hooks/: useLocalStorage.ts
frontend/src/pages/: Home.tsx  SplitTool.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: balanceCalculator.ts
