[project]
name = "splithaus-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "AlbinShaji11",email = "albin7090@gmail.com"}
]
package-mode = false
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "pillow (>=12.2.0,<13.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "paddlepaddle",
    "paddleocr",
    "pdf2image",
    "opencv-python-headless",
    "pdfplumber (>=0.11.9,<0.12.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.14,<0.16.0)",
    "black (>=26.5.1,<27.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
